--- a/html/officialDocument.html
+++ b/html/officialDocument.html
@@ -57,7 +57,7 @@
 		$(document).ready(function(){
 			var hori = $.hori;
 			/*设置标题*/
-			hori.setHeaderTitle("公文查阅");
+			hori.setHeaderTitle("最新公文");
 			$.hori.showLoading();
 			loaded();
 			$("#tabs").tabs({beforeActivate:function(event,ui){
