--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,7 @@
 
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
 
-
+<script type="application/javascript" src="../assets/iscroll.js"></script>
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
@@ -32,8 +32,10 @@
 			bottom: 1.5em;
 			width: 96%;
 		}
-		.ui-content .ui-listview-inset, .ui-panel-inner.ui-listview-inset {
-			margin: 0em 0;
+		#divContact{
+    background-image: url('../assets/home/contact.png');
+    background-repeat: no-repeat;
+    background-position: center;
 		}
 	</style>
 </head>
@@ -63,14 +65,14 @@
 						<div>
 							<br />
 							<ul data-bind="foreach: data" data-role="listview"
-								data-inset="true">
+								data-inset="true" id="contactList">
 								<li><font>员工编号：<span data-bind="text: uid"></span></font><br>
 									<font>员工姓名：<span data-bind="text: displayName"></span></font><br>
 									<font>电子邮箱：<span data-bind="text: mail"></span></font><br>
 									<font>所属公司:<span data-bind="text: crscCompanyName"></span></font><br>
 									<font>所属部门:<span data-bind="text: crscDepName"></span></font><br>
-									<font>移动电话：<a data-bind="attr: {href:crscMobileHR}"><span data-bind="text: crscMobileHR"></span></a></font><br> 
-									<font>办公电话：<a data-bind="attr: {href:crscOfficePhoneHR}"><span data-bind="text: crscOfficePhoneHR"></span></a></font><br>
+									<font>移动电话：<a data-bind="attr: {href: telcrscMobileHR}"><span data-bind="text: crscMobileHR"></span></a></font><br> 
+									<font>办公电话：<a data-bind="attr: {href: telcrscOfficePhoneHR}"><span data-bind="text: crscOfficePhoneHR"></span></a></font><br>
 								</li>
 							</ul>
 						</div>
