* 替换切换图片 * 调整气泡偏移

--- a/html/home.html
+++ b/html/home.html
@@ -88,7 +88,7 @@ function adjustBubble(){
 	}else if(window.navigator.userAgent.match(/android/i)) {
 
 		spanTodo.style.top=divOneOffset.top;
-		spanTodo.style.left=imgOffset.left+68+10;
+		spanTodo.style.left=imgOffset.left+68;
 	}else{
 		//alert('other')
 		spanTodo.style.top=divOneOffset.top;
@@ -289,7 +289,7 @@ a {
                     <a href="#">more</a>
                   </div> -->
              </div>
-             <p></p>
+             <br>
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
 					<a href="javascript:void(0);" onclick="loadTaskList()" class="ui-link"> <img id="imgToDo" width="80" height="80" src="../assets/home/task.png">
