--- a/html/contact.html
+++ b/html/contact.html
@@ -84,6 +84,9 @@
 						</div>
 					</div>
 				</div>
+				<div id="empty_bg">
+				    <img style="width: 100%; height: auto;" src="../assets/contact/contact_bg.jpg" >
+				</div>
 
 			</div>
 		</div>
