--- a/html/login.html
+++ b/html/login.html
@@ -229,8 +229,8 @@
 		<div data-role="page" id="login" class="login">
 			<div data-role="content" align="center">
 			   <div class=logoDiv>
-				<div class=loginLogo ><img src="../assets/home/logo.png" width="100%" height="200px"></div>
-				<div><span style="width:100%;height:50px; font-weight:bold;"><h1>中国通号集团办公系统<h1></h1></span></div>
+				<div class=loginLogo ><img src="../assets/home/logo.png" style="width: 100%; height: auto;"><h1>中国通号集团办公系统</h1></div>
+				
 				</div>
 				<ul id="viewBody" data-role="listview" data-theme="c" data-inset="true" style="max-width:400px;" >
 					<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
