--- a/html/contact.html
+++ b/html/contact.html
@@ -46,7 +46,7 @@
 				<table>
 					<tr>
 						<td width="95%" height="20px"><input id="phonenumber"
-							name="phonenumber" type="text" value="admin" /></td>
+							name="phonenumber" type="text" value="" /></td>
 						<td><a href="#search" data-role="button" data-inline="true"
 							data-rel="dialog" data-corners="true" data-shadow="true"
 							data-iconshadow="true" data-wrapperels="span" data-theme="f"
