* 统一通讯录名称

--- a/html/home.html
+++ b/html/home.html
@@ -277,7 +277,7 @@ a {
 	                  data-bind="foreach: list">
 	                  <div class="swiper-slide">
 	                      <a data-bind="click:showDetail"> <img
-	                          data-bind="attr:{'src':imgSrc}" class="swiper-image" />
+	                          data-bind="attr:{'src':imgSrc}" class="swiper-image" style="border: 1px solid;" />
 	                          <!-- <div>
 	                              <span class="title" data-bind="text: contentTitle"></span>
 	                          </div> -->
@@ -309,7 +309,7 @@ a {
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
 					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img width="80" height="80" src="../assets/home/tel.png">
-					</a> <br> <span style="color: #434343"><strong>电话查询</strong></span>
+					</a> <br> <span style="color: #434343"><strong>通讯录</strong></span>
 				</div>
 				<div class="ui-block-b">
 					<a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="80" height="80" src="../assets/home/Connection.png">
