--- a/html/app.html
+++ b/html/app.html
@@ -28,10 +28,10 @@
 		<ul data-role="listview">
 			<li data-role="list-divider">Android Client</li>
 			
-			<li><a href="http://115.28.33.62/download/81e6b389f8ac4da294efe44b38618fcc/android"  target="_blank" >安卓在线安装 </a></li>
+			<li><a href="http://m.crsc.cn:8981/download/mobiletonghao/android"  target="_blank" >安卓在线安装 </a></li>
 			<li data-role="list-divider">IOS Client</li>
 			
-			<li><a id="aIosInstall" target="_self"  href="http://115.28.33.62/download/81e6b389f8ac4da294efe44b38618fcc/ios" >苹果在线安装</a></li>
+			<li><a id="aIosInstall" target="_self"  href="itms-services://?action=download-manifest&url=https://dn-horitech.qbox.me/tonghao_mainfest.plist" >苹果在线安装</a></li>
 			
 		</ul>
 	
@@ -41,7 +41,7 @@
 	</div><!-- /content -->
 
 	<div data-role="footer" class="footer-docs" data-theme="c">
-			<p>&copy; 2012-09 HoriMobile</p>
+			<p>&copy; 2015-01 HoriMobile</p>
 	</div>
 
 	</div><!-- /page -->
