--- a/html/login.html
+++ b/html/login.html
@@ -229,7 +229,10 @@
 		<div data-role="page" id="login" class="login">
 			<div data-role="content" align="center">
 			   <div class=logoDiv>
-				<div class=loginLogo ><img src="../assets/home/logo.png" style="width: 100%; height: auto;"><h1>中国通号集团移动办公系统</h1></div>
+				<div class=loginLogo >
+				    <img src="../assets/home/logo.png" style="width: 100%; height: auto;">
+				    <img src="../assets/home/system_name.png" style="width: 100%; height: auto;">
+                </div>
 				</div>
 				<ul id="viewBody" data-role="listview" data-theme="c" data-inset="true" style="max-width:400px;" >
 					<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
