附件默认一串英文改为正文

--- a/html/app.html
+++ b/html/app.html
@@ -41,7 +41,7 @@
 	</div><!-- /content -->
 
 	<div data-role="footer" class="footer-docs" data-theme="c">
-			<p>&copy; 2015-01 HoriMobile</p>
+			<p>&copy; 2015-01 Mobile</p>
 	</div>
 
 	</div><!-- /page -->
