* 修改通讯录背景显示

--- a/html/contact.html
+++ b/html/contact.html
@@ -39,8 +39,8 @@
 		}
 	</style>
 </head>
-<body >
-	<div id="list" data-role="page" class="type-home">
+<body>
+	<div id="list" data-role="page">
 		<div data-role="content" align="center">
 			<div style="margin-left: 15px;">
 				<table>
@@ -84,13 +84,13 @@
 						</div>
 					</div>
 				</div>
-				<div id="empty_bg">
-				    <img style="width: 100%; height: auto;" src="../assets/contact/contact_bg.jpg" >
-				</div>
+				
 
 			</div>
 		</div>
-
+          <div id="empty_bg" style="width: 100%; padding: 0px; margin: 0px;">
+              <img style="width: 100%; height: auto;" src="../assets/contact/contact_bg.jpg" >
+          </div>
 	</div>
 
 
