* 修改首页图标 + 通讯录列表添加头像

--- a/html/contact.html
+++ b/html/contact.html
@@ -23,21 +23,34 @@
 <script src="../lib/knockout/knockout.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
 <script src="../lib/app/contact/app.js"></script>
-	<style>
-		#wrapper {
-			position: fixed;
-			overflow: scroll;
-			top: 100px;
-			left: 2%;
-			bottom: 1.5em;
-			width: 96%;
-		}
-		#divContact{
-    background-image: url('../assets/home/contact.png');
-    background-repeat: no-repeat;
-    background-position: center;
-		}
-	</style>
+<style type="text/css">
+	#wrapper {
+		position: fixed;
+		overflow: scroll;
+		top: 100px;
+		left: 2%;
+		bottom: 1.5em;
+		width: 96%;
+	}
+	#divContact{
+	    background-image: url('../assets/home/contact.png');
+	    background-repeat: no-repeat;
+	    background-position: center;
+	}
+	.ui-li-thumb, .ui-listview .ui-li-icon {
+		max-height: 300px;
+    }
+    
+    .ui-listview>.ui-li.ui-last-child .ui-li-thumb:not(.ui-li-icon) {
+		-webkit-border-bottom-left-radius: initial;
+		border-bottom-left-radius: initial;
+	}
+	
+	.ui-listview>.ui-li.ui-first-child .ui-li-thumb:not(.ui-li-icon) {
+		-webkit-border-top-left-radius: initial;
+		border-top-left-radius: initial;
+	}
+</style>
 </head>
 <body>
 	<div id="list" data-role="page">
@@ -66,7 +79,10 @@
 							<br />
 							<ul data-bind="foreach: data" data-role="listview"
 								data-inset="true" id="contactList">
-								<li><font>员工编号：<span data-bind="text: uid"></span></font><br>
+								<li>
+								<img src="../assets/contact/default_avatar.png" 
+                                    style="margin-left: 10px; margin-top: 10px; margin-right: 10px; vertical-align: middle;" />
+								    <font>员工编号：<span data-bind="text: uid"></span></font><br>
 									<font>员工姓名：<span data-bind="text: displayName"></span></font><br>
 									<font>电子邮箱：<span data-bind="text: mail"></span></font><br>
 									<font>所属公司:<span data-bind="text: crscCompanyName"></span></font><br>
