--- a/html/home.html
+++ b/html/home.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="../lib/swiper/idangerous.swiper.css">
 <link rel="stylesheet" href="../assets/home/swiper/swiper.css">
 <script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
@@ -269,9 +270,9 @@ a {
   
 </style>
 </head>
-<body>
+<body >
 <!-- <body class="ui-mobile-viewport ui-overlay-c"> -->
-	<div data-role="page" id="home" style="background-image: url(../assets/home/bg_empty.jpg); min-height: 100%; background-position: initial initial; background-repeat: repeat repeat;" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active">
+	<div data-role="page" id="home" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active" style="background: #FFF;">
 		<div data-role="content" align="center" class="ui-content" role="main">
 		      <div class="swiper-container">
 	              <div id="tpxwSwiper" class="swiper-wrapper"
