--- a/html/contact.html
+++ b/html/contact.html
@@ -27,10 +27,10 @@
 	#wrapper {
 		position: fixed;
 		overflow: scroll;
-		top: 100px;
-		left: 2%;
+		top: 80px;
+		left: 1px;
 		bottom: 1.5em;
-		width: 96%;
+		width: 100%;
 	}
 	#divContact{
 	    background-image: url('../assets/home/contact.png');
@@ -39,6 +39,7 @@
 	}
 	.ui-li-thumb, .ui-listview .ui-li-icon {
 		max-height: 300px;
+		max-width: 120px;
     }
     
     .ui-listview>.ui-li.ui-last-child .ui-li-thumb:not(.ui-li-icon) {
@@ -50,12 +51,16 @@
 		-webkit-border-top-left-radius: initial;
 		border-top-left-radius: initial;
 	}
+	.ui-li-has-thumb .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li-has-thumb {
+	   min-height: 59px;
+	   padding-left: 130px;
+	}
 </style>
 </head>
 <body>
 	<div id="list" data-role="page">
 		<div data-role="content" align="center">
-			<div style="margin-left: 15px;">
+			<div style="margin-left: 0px;">
 				<table>
 					<tr>
 						<td width="95%" height="20px"><input id="phonenumber"
@@ -73,15 +78,15 @@
 			</div>
 
 			<div id="divContact">
-				<div id="wrapper" style="display: none;">
+				<div id="wrapper" style="display: none; ">
 					<div id="scroller">
 						<div>
 							<br />
 							<ul data-bind="foreach: data" data-role="listview"
-								data-inset="true" id="contactList">
+								data-inset="false" id="contactList">
 								<li>
 								<img src="../assets/contact/default_avatar.png" 
-                                    style="margin-left: 10px; margin-top: 10px; margin-right: 10px; vertical-align: middle;" />
+                                    style="margin-left: 20px; margin-top: 10px; margin-right: 10px; vertical-align: middle;" />
 								    <font>员工编号：<span data-bind="text: uid"></span></font><br>
 									<font>员工姓名：<span data-bind="text: displayName"></span></font><br>
 									<font>电子邮箱：<span data-bind="text: mail"></span></font><br>
@@ -92,8 +97,9 @@
 								</li>
 							</ul>
 						</div>
-						<div id="pullUp" name="nodata" align="center" class="" style="display: none; line-height: 3em; margin-top: -1em;">
-							<span class="pullUpLabel">上拉加载更多...</span>
+						<div id="pullUp" name="nodata" align="center" class="" style="display: none; line-height: 3em; margin-top:10px;">
+							<span class="pullUpLabel">
+                            </span>
 						</div>
 						<div>
 							<br />
