--- a/html/annouceList.html
+++ b/html/annouceList.html
@@ -27,7 +27,7 @@
 </head>
 <body style="overflow: hidden;">
 	<div id="list" data-role="page" class="type-home">
-		<div data-role="content" align="center">
+		<div data-role="content" align="center" style="padding-top: 0px">
 			<div  id="divDataLoading" style="width:90%;">
 				<ul  data-role="listview" data-inset="true">
 					<li class="ui-li-static ui-body-inherit ui-first-child ui-last-child"><h3>数据加载中……</h3></li>
@@ -38,7 +38,7 @@
 					<div id="scroller" >
 						<div>
 						<br/>
-							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="margin-top: 30px;">
+							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="margin-top:0px;">
 								
 							</ul>
 						</div>
