--- a/html/annouceform.html
+++ b/html/annouceform.html
@@ -10,9 +10,8 @@
 	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
 
 	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" /> 
-
-	
-	<script src="../lib/jquery/jquery.min.js"></script>		
+	<script src="../lib/jquery/jquery.min.js"></script>	
+	<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>	
 	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/json/json2.js"></script>
 	<script src="../lib/knockout/knockout.js"></script>
