--- a/html/taskList.html
+++ b/html/taskList.html
@@ -122,7 +122,7 @@
 				"success":function(res){
 					$("#didDataList").empty();
 					$("#moredata").remove();
-					if(res.indexOf("无更多可以加载的内容")!="-1"){
+					if(res.indexOf("无更多内容")!="-1"){
 						var divs = document.getElementsByName("nodata");
 						for(var i=0; i<divs.length; i++)
 						{
@@ -156,7 +156,7 @@
 				"success":function(res){
 					$("#todoDataList").empty();
 					$("#moredata").remove();
-					if(res.indexOf("无更多可以加载的内容")!="-1"){
+					if(res.indexOf("无更多内容")!="-1"){
 						var divs = document.getElementsByName("nodata");
 						for(var i=0; i<divs.length; i++)
 						{
