* 修改选择人员时label信息中itcode为员工编号

--- a/html/searchPerson.html
+++ b/html/searchPerson.html
@@ -42,7 +42,7 @@
 									   <h3>选择人员</h3>
 									   <table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
 											<tr><td  colspan="2">
-											<label for="username"><strong>人名或ITCode:</strong></label>
+											<label for="username"><strong>姓名或员工编号:</strong></label>
 											</td>
 											</tr>
 											<tr><td>
