--- a/html/home.html
+++ b/html/home.html
@@ -315,12 +315,14 @@ a {
 					</a> <br> <span style="color: #434343"><strong>通讯录</strong></span>
 				</div>
 				<div class="ui-block-b">
-					<a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="80" height="80" src="../assets/home/Connection.png">
-					</a> <br> <span style="color: #434343"><strong>社区</strong></span>
-				</div>
-				<div class="ui-block-c">
 					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="80" height="80" src="../assets/home/mail.png">
 					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span>
+					<!-- <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="80" height="80" src="../assets/home/Connection.png">
+					</a> <br> <span style="color: #434343"><strong>社区</strong></span> -->
+				</div>
+				<div class="ui-block-c">
+					<!-- <a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="80" height="80" src="../assets/home/mail.png">
+					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span> -->
 				</div>
 			</div>
 			<br>
