--- a/html/contact.html
+++ b/html/contact.html
@@ -78,7 +78,7 @@
 			<div id="divContact">
 				<div id="wrapper" style="display: none; ">
 					<div id="scroller">
-						<div>
+						<div style="margin-top:30px;">
 							<br />
 							<ul data-bind="foreach: data" data-role="listview"
 								data-inset="false" id="contactList">
@@ -88,8 +88,8 @@
 								    <font>员工编号：<span data-bind="text: uid"></span></font><br>
 									<font>员工姓名：<span data-bind="text: displayName"></span></font><br>
 									<font>电子邮箱：<span data-bind="text: mail"></span></font><br>
-									<font>所属公司:<span data-bind="text: crscCompanyName"></span></font><br>
-									<font>所属部门:<span data-bind="text: crscDepName"></span></font><br>
+									<font>所属公司：<span data-bind="text: crscCompanyName"></span></font><br>
+									<font>所属部门：<span data-bind="text: crscDepName"></span></font><br>
 									<font>移动电话：<a data-bind="attr: {href: telcrscMobileHR}"><span data-bind="text: crscMobileHR"></span></a></font><br> 
 									<font>办公电话：<a data-bind="attr: {href: telcrscOfficePhoneHR}"><span data-bind="text: crscOfficePhoneHR"></span></a></font><br>
 								</li>
