数据加载中提示信息样式修改

--- a/html/annouceList.html
+++ b/html/annouceList.html
@@ -27,10 +27,10 @@
 </head>
 <body style="overflow: hidden;">
 	<div id="list" data-role="page" class="type-home">
-		<div data-role="content" align="center" style="padding-top: 0px">
-			<div  id="divDataLoading" style="width:100%;">
+		<div data-role="content" align="center" style="padding-top: 0px; width: 100%; margin-left:0px; padding-left:0px;">
+			<div  id="divDataLoading" style="width:100%; margin-left:0px;">
 				<ul  data-role="listview" data-inset="true">
-					<li class="ui-li-static ui-body-inherit ui-first-child ui-last-child"><h3>数据加载中……</h3></li>
+					<li class="ui-li-static ui-body-inherit ui-first-child ui-last-child" style="width:100%; margin-left:0px;"><h3>数据加载中……</h3></li>
 				</ul>				
 			</div>
 			<div id="annouceList">
