--- a/html/taskList.html
+++ b/html/taskList.html
@@ -249,15 +249,12 @@
 			top: 80px;
 			left: 0px;
 			bottom: 1.5em;
-<<<<<<< HEAD
-			width: 97%;
-=======
 			width: 100%;
->>>>>>> 5a0f6cacbd9530c27825bf66bb07f67b01b23520
+
 		}
-		/*.ui-content .ui-listview-inset, .ui-panel-inner.ui-listview-inset {
+		.ui-content .ui-listview-inset, .ui-panel-inner.ui-listview-inset {
 			margin: 0em 0;
-		}*/
+		}
 	</style>
 </head>
 <body>
