--- a/html/home.html
+++ b/html/home.html
@@ -312,17 +312,17 @@ a {
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
 					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img width="80" height="80" src="../assets/home/tel.png">
-					</a> <br> <span style="color: #434343"><strong>通讯录</strong></span>
+					</a> <br> <span style="color: #434343"><strong>人员查询</strong></span>
 				</div>
 				<div class="ui-block-b">
 					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="80" height="80" src="../assets/home/mail.png">
 					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span>
 					<!-- <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="80" height="80" src="../assets/home/Connection.png">
-					</a> <br> <span style="color: #434343"><strong>社区</strong></span> -->
+					</a> <br> <span style="color: #434343"><strong>通号社区</strong></span> -->
 				</div>
 				<div class="ui-block-c">
-					<!-- <a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="80" height="80" src="../assets/home/mail.png">
-					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span> -->
+					<a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="80" height="80" src="../assets/home/Connection.png">
+					</a> <br> <span style="color: #434343"><strong>通号社区</strong></span> 
 				</div>
 			</div>
 			<br>
