--- a/html/contact.html
+++ b/html/contact.html
@@ -85,11 +85,11 @@
 								<li>
 								<img src="../assets/contact/default_avatar.png" 
                                     style="margin-left: 20px; margin-top: 10px; margin-right: 10px; vertical-align: middle;" />
-								    <font>员工编号：<span data-bind="text: uid"></span></font><br>
-									<font>员工姓名：<span data-bind="text: displayName"></span></font><br>
-									<font>电子邮箱：<span data-bind="text: mail"></span></font><br>
-									<font>所属公司：<span data-bind="text: crscCompanyName"></span></font><br>
-									<font>所属部门：<span data-bind="text: crscDepName"></span></font><br>
+								    <!-- <font>员工编号：><span data-bind="text: uid"></span></font><br> -->
+									<font><!-- 员工姓名： --><span data-bind="text: displayName"></span></font><br>
+									<font><!-- 电子邮箱： --><span data-bind="text: mail"></span></font><br>
+									<font><!-- 所属公司： --><span data-bind="text: crscCompanyName"></span></font><br>
+									<font><!-- 所属部门： --><span data-bind="text: crscDepName"></span></font><br>
 									<font>移动电话：<a data-bind="attr: {href: telcrscMobileHR}"><span data-bind="text: crscMobileHR"></span></a></font><br> 
 									<font>办公电话：<a data-bind="attr: {href: telcrscOfficePhoneHR}"><span data-bind="text: crscOfficePhoneHR"></span></a></font><br>
 								</li>
