--- a/html/home.html
+++ b/html/home.html
@@ -199,6 +199,11 @@ var icount=0;
 		$.hori.showLoading();
 		$.hori.loadPage($.hori.getconfig().serverBaseUrl+ 'viewhome/html/contact.html','viewhome/xml/searchContact.xml')
 	}
+	//新版通讯录
+	function loadNewContact(){
+		$.hori.showLoading();
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl+ 'viewhome/html/newcontact.html','viewhome/xml/searchContact.xml')
+	}
 	//公文查阅
 	function officialDocument() {
 		var officialLibrary = localStorage.getItem("officialLibrary");
@@ -321,8 +326,8 @@ a {
 					</a> <br> <span style="color: #434343"><strong>社区</strong></span> -->
 				</div>
 				<div class="ui-block-c">
-					<!-- <a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="80" height="80" src="../assets/home/mail.png">
-					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span> -->
+					 <a href="javascript:void(0)" onclick="loadNewContact()" class="ui-link"> <img width="80" height="80" src="../assets/home/Connection.png">
+					</a> <br> <span style="color: #434343"><strong>新版通讯录</strong></span> 
 				</div>
 			</div>
 			<br>
