* 调整首页轮训图片样式

--- a/html/home.html
+++ b/html/home.html
@@ -280,13 +280,13 @@ a {
 <body >
 <!-- <body class="ui-mobile-viewport ui-overlay-c"> -->
 	<div data-role="page" id="home" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active" style="background: #FFF;">
-		<div data-role="content" align="center" class="ui-content" role="main">
+		<div data-role="content" align="center" class="ui-content" style="padding: 0px;" role="main">
 		      <div class="swiper-container">
 	              <div id="tpxwSwiper" class="swiper-wrapper"
 	                  data-bind="foreach: list">
 	                  <div class="swiper-slide">
 	                      <a data-bind="click:showDetail"> <img
-	                          data-bind="attr:{'src':imgSrc}" class="swiper-image" style="border: 1px solid;" />
+	                          data-bind="attr:{'src':imgSrc}" class="swiper-image" />
 	                          <!-- <div>
 	                              <span class="title" data-bind="text: contentTitle"></span>
 	                          </div> -->
