--- a/html/newcontact1.html
+++ b/html/newcontact1.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>通讯录</title>
+<title>部门列表</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <meta name="viewport"
@@ -21,13 +21,15 @@
 <script src="../lib/knockout/knockout.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
 <style type="text/css">
-	
+ul li{
+    line-height: 2.5em;
+}   
 </style>
 <script type="text/javascript">
 	$(document).ready(function(){
 		var hori=$.hori;
 		//$.hori.showLoading();
-		hori.setHeaderTitle("返回");
+		hori.setHeaderTitle("部门列表");
 	});
 	function loadContact1(){
 		$.hori.showLoading();
