* 首页顶部添加系统名称

--- a/html/home.html
+++ b/html/home.html
@@ -280,7 +280,8 @@ a {
 <body >
 <!-- <body class="ui-mobile-viewport ui-overlay-c"> -->
 	<div data-role="page" id="home" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active" style="background: #FFF;">
-		<div data-role="content" align="center" class="ui-content" style="padding: 0px;" role="main">
+		<div data-role="content" align="center" class="ui-content" style="padding: 0px;" role="main"> 
+		      <img src="../assets/home/home_top.jpg" style="width: 100%; height: auto;">
 		      <div class="swiper-container">
 	              <div id="tpxwSwiper" class="swiper-wrapper"
 	                  data-bind="foreach: list">
