* 还原社区图标功能指向

--- a/html/home.html
+++ b/html/home.html
@@ -322,7 +322,7 @@ a {
 					</a> <br> <span style="color: #434343"><strong>人员查询</strong></span>
 				</div>
 				<div class="ui-block-b">
-					 <a href="javascript:void(0)" onclick="loadNewContact()" class="ui-link"> <img class="moduleIcon" src="../assets/home/Connection.png">
+					 <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img class="moduleIcon" src="../assets/home/Connection.png">
 					</a> <br> <span style="color: #434343"><strong>通号社区</strong></span> 
 				</div>
 				<div class="ui-block-c">
