* 修改图片位置，添加.nomedia标识

--- a/html/contact.html
+++ b/html/contact.html
@@ -31,7 +31,7 @@
 		width: 100%;
 	}
 	#divContact{
-	    background-image: url('../assets/home/contact.png');
+	    background-image: url('../assets/home/items/module-res/contact.png');
 	    background-repeat: no-repeat;
 	    background-position: center;
 	}
