--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="../assets/home/jquery-mobile-home.css">
 <link rel="stylesheet" href="../assets/home/icon.css">
 <link rel="stylesheet" href="../lib/swiper/idangerous.swiper.css">
-<link rel="stylesheet" href="../assets/home/swiper/swiper.css">
+<link rel="stylesheet" href="../assets/home/items/module-res/swiper/swiper.css">
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
@@ -281,7 +281,7 @@ a {
 <!-- <body class="ui-mobile-viewport ui-overlay-c"> -->
 	<div data-role="page" id="home" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active" style="background: #FFF;">
 		<div data-role="content" align="center" class="ui-content" style="padding: 0px;" role="main"> 
-		      <img src="../assets/home/home_top.jpg" style="width: 100%; height: auto;">
+		      <img src="../assets/home/items/module-res/home_top.jpg" style="width: 100%; height: auto;">
 		      <div class="swiper-container">
 	              <div id="tpxwSwiper" class="swiper-wrapper"
 	                  data-bind="foreach: list">
@@ -302,33 +302,33 @@ a {
              <br>
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
-					<a href="javascript:void(0);" onclick="loadTaskList()" class="ui-link"> <img class="moduleIcon" src="../assets/home/task.png">
+					<a href="javascript:void(0);" onclick="loadTaskList()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/task.png">
 					</a> <!-- <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all" style="position: fixed; top: 15px; left: 359.5px;">0</span> --> <br>
 					<span style="color: #434343"><strong>待办任务</strong></span>
 				</div>
 				<div class="ui-block-b">
-					<a href="javascript:void(0);" onclick="officialDocument()" class="ui-link"> <img class="moduleIcon" src="../assets/home/official.png">
+					<a href="javascript:void(0);" onclick="officialDocument()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/official.png">
 					</a> <br> <span style="color: #434343"><strong>最新公文</strong></span>
 				</div>
 				<div class="ui-block-c">
-					<a href="javascript:void(0)" onclick="loadAnnouceList()" class="ui-link"> <img class="moduleIcon" src="../assets/home/Annouce.png">
+					<a href="javascript:void(0)" onclick="loadAnnouceList()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/Annouce.png">
 					</a> <br> <span style="color: #434343"><strong>通知公告</strong></span>
 				</div>
 			</div>
 			<br>
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
-					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img class="moduleIcon" src="../assets/home/tel.png">
+					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/tel.png">
 					</a> <br> <span style="color: #434343"><strong>人员查询</strong></span>
 				</div>
 				<div class="ui-block-b">
-					 <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img class="moduleIcon" src="../assets/home/Connection.png">
+					 <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/Connection.png">
 					</a> <br> <span style="color: #434343"><strong>通号社区</strong></span> 
 				</div>
 				<div class="ui-block-c">
-					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img class="moduleIcon" src="../assets/home/mail.png">
+					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/mail.png">
 					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span>
-					<!-- <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img class="moduleIcon" src="../assets/home/Connection.png">
+					<!-- <a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img class="moduleIcon" src="../assets/home/items/module-res/Connection.png">
 					</a> <br> <span style="color: #434343"><strong>通号社区</strong></span> -->
 				</div>
 			</div>
