* 修改通讯录使用图片位置

--- a/html/contact.html
+++ b/html/contact.html
@@ -31,7 +31,7 @@
 		width: 100%;
 	}
 	#divContact{
-	    background-image: url('../assets/home/items/module-res/contact.png');
+	    background-image: url('../assets/home/contact.png');
 	    background-repeat: no-repeat;
 	    background-position: center;
 	}
@@ -83,7 +83,7 @@
 							<ul data-bind="foreach: data" data-role="listview"
 								data-inset="false" id="contactList">
 								<li>
-								<img src="../assets/contact/default_avatar.png" 
+								<img src="../assets/home/items/module-res/contact/default_avatar.png" 
                                     style="margin-left: 20px; margin-top: 10px; margin-right: 10px; vertical-align: middle;" />
 								    <!-- <font>员工编号：><span data-bind="text: uid"></span></font><br> -->
 									<font><!-- 员工姓名： --><span data-bind="text: displayName"></span></font><br>
@@ -109,7 +109,7 @@
 			</div>
 		</div>
           <div id="empty_bg" style="width: 100%; padding: 0px; margin: 0px;">
-              <img style="width: 100%; height: auto;" src="../assets/contact/contact_bg.jpg" >
+              <img style="width: 100%; height: auto;" src="../assets/home/items/module-res/contact/contact_bg.jpg" >
           </div>
 	</div>
 
