通号问题修改

--- a/html/contact.html
+++ b/html/contact.html
@@ -53,6 +53,14 @@
 	   min-height: 59px;
 	   padding-left: 130px;
 	}
+	.ui-corner-all{
+		-webkit-border-radius: 0em;
+		border-radius: 0em;
+	}
+	.ui-btn-corner-all {
+		-webkit-border-radius: 0em;
+		border-radius: 0em;
+	}
 </style>
 </head>
 <body>
