--- a/html/login.html
+++ b/html/login.html
@@ -215,7 +215,14 @@
 			}
 		</script>
 		<style>
-		
+			.ui-corner-all{
+				-webkit-border-radius: 0em;
+				border-radius: 0em;
+			}
+			.ui-btn-corner-all {
+				-webkit-border-radius: 0em;
+				border-radius: 0em;
+			}
 		</style>
 	</head>
 	<body>
