--- a/html/taskList.html
+++ b/html/taskList.html
@@ -114,7 +114,8 @@
 			runTodoCount=runTodoCount+1;
 			localStorage.setItem("click","1");
 			localStorage.setItem("getTaskMoreData","todoList");
-			var url = $.hori.getconfig().appServerHost+'view/oamobile/todosList/Produce/DigiFlowMobile.nsf/agGetMsgViewData?openagent&login&server='+oaMsgServer+'&dbpath=DFMessage/dfmsg_'+itcode+'.nsf&view=vwTaskUnDoneForMobile&thclass=&page='+todoStart+'&count=10';
+			//var url = $.hori.getconfig().appServerHost+'view/oamobile/todosList/Produce/DigiFlowMobile.nsf/agGetMsgViewData?openagent&login&server='+oaMsgServer+'&dbpath=DFMessage/dfmsg_'+itcode+'.nsf&view=vwTaskUnDoneForMobile&thclass=&page='+todoStart+'&count=10';
+			var url = $.hori.getconfig().appServerHost+'view/oamobile/todosList/Produce/DigiFlowMobile.nsf/agGetMsgViewData?openagent&login&server='+oaMsgServer+'&dbpath=DFMessage/dfmsg_'+itcode+'.nsf&view=taskByDateDownUnDoneView&thclass=&page='+todoStart+'&count=10';
 			$.hori.showLoading();
 			$.hori.ajax({
 				"type":"post",
@@ -148,7 +149,8 @@
 			runDidCount=runDidCount+1;
 			localStorage.setItem("click","2");
 			localStorage.setItem("getTaskMoreData","didList");
-			var url = $.hori.getconfig().appServerHost+'view/oamobile/taskDownList/Produce/DigiFlowMobile.nsf/agGetMsgViewData?openagent&login&server='+oaMsgServer+'&dbpath=DFMessage/dfmsg_'+itcode+'.nsf&view=vwTaskDoneForMobile&thclass=&page='+didStart+'&count=10';
+			//var url = $.hori.getconfig().appServerHost+'view/oamobile/taskDownList/Produce/DigiFlowMobile.nsf/agGetMsgViewData?openagent&login&server='+oaMsgServer+'&dbpath=DFMessage/dfmsg_'+itcode+'.nsf&view=vwTaskDoneForMobile&thclass=&page='+didStart+'&count=10';
+			var url = $.hori.getconfig().appServerHost+'view/oamobile/taskDownList/Produce/DigiFlowMobile.nsf/agGetMsgViewData?openagent&login&server='+oaMsgServer+'&dbpath=DFMessage/dfmsg_'+itcode+'.nsf&view=taskByDateDownDoneView&thclass=&page='+didStart+'&count=10';
 			$.hori.showLoading();
 			$.hori.ajax({
 				"type":"post",
@@ -193,6 +195,7 @@
 			}
 			var docunid = $(str).data("unid");
 			var dbpath = $(str).data("dbpath");
+			var mobile = $(str).data("mobile");
 			/*if (window.navigator.userAgent.match(/iPad/i) || window.navigator.userAgent.match(/iPhone/i) || window.navigator.userAgent.match(/iPod/i)||window.navigator.userAgent.match(/android/i)){
 				var oaurl =$.hori.getconfig().appServerHost+"view/oamobile/contentmobile/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid+'?editdocument&data-application=' + $.hori.getconfig().appKey + "&data-userstore=" + localStorage.getItem("cookie_userstore");
 			}else{
@@ -200,10 +203,18 @@
 			}*/
 			var oaurl = "/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
 			localStorage.setItem("oaDataSource",oaurl);
-			if(dbpath=="application/digiflowinfopublish.nsf"){
-				var targetURL=$.hori.getconfig().serverBaseUrl+"viewhome/html/annouceTaskForm.html";
+			if(mobile=="yes"){
+				if(dbpath=="application/digiflowinfopublish.nsf"){
+					var targetURL=$.hori.getconfig().serverBaseUrl+"viewhome/html/annouceTaskForm.html";
+				}else{
+					var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appform.html";
+				}
 			}else{
-				var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appform.html";
+				if(dbpath=="application/digiflowinfopublish.nsf"){
+					var targetURL=$.hori.getconfig().serverBaseUrl+"viewhome/html/annouceTaskFormPC.html";
+				}else{
+					var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appformPC.html";
+				}
 			}
 			
 			targetURL=encodeURI(targetURL);
