--- a/html/searchPerson.html
+++ b/html/searchPerson.html
@@ -48,8 +48,8 @@
 											<tr><td>
 											<input type="text" id="username" name="username" data-inline="true"></input>
 											</td><td>
-											<a data-role="button" data-inline="true" href="#"
-												onclick="selectOaPerson()">查询</a>
+											<a data-role="button" data-inline="true" href="#" data-theme="f"
+												onclick="selectOaPerson()" style="color: white;">查询</a>
 											</td></tr>
 										</table>
 									</div>					
@@ -57,8 +57,8 @@
 
 								<div style="width:100%;" align="center">
 									<strong>
-										<a href="javascript:sure();" data-role="button" data-inline="true"> 确定 </a>
-										<a href="javascript:back();" data-role="button" data-inline="true"> 取消 </a>
+										<a href="javascript:sure();" data-role="button" data-inline="true" data-theme="f" style="color: white;">  确定 </a>
+										<a href="javascript:back();" data-role="button" data-inline="true" data-theme="f" style="color: white;"> 取消 </a>
 									</strong>
 								</div>
 								
